--- a/SimTECH/SimTECH/Pages/Factors/TyreEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/TyreEditor.razor
@@ -1,7 +1,7 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>Modify tyre</MudText>
-        <MudText>Tyres get replaced when their life reaches 0</MudText>
+        <MudText Typo="Typo.h5">Tyre editor</MudText>
+        <MudText>Tyres get replaced when their life is about to reach 0</MudText>
     </TitleContent>
     <DialogContent>
         <MudForm Model="@Model">
