--- a/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
@@ -19,7 +19,7 @@
                 </MudStack>
             </CellTemplate>
         </TemplateColumn>
-        <PropertyColumn Property="e => e.Number" SortBy="e => e.Number" Title="Nr." HeaderClass="number-col hide-sort-icons" CellClass="number-col" CellStyleFunc="@ViewHelper.DriverTeamStyleFunc" />
+        <PropertyColumn Property="e => e.Number" SortBy="e => e.Number" Title="No." HeaderClass="number-col hide-sort-icons" CellClass="number-col" CellStyleFunc="@ViewHelper.DriverTeamStyleFunc" />
         <PropertyColumn Property="e => e.Skill" />
         <PropertyColumn Property="e => e.Reliability" Title="Rel." />
         <PropertyColumn Property="e => e.TeamRole" Title="Role" />
