--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>Teams</PageTitle>
 
-<MudContainer>
+<MudContainer MaxWidth="MaxWidth.Medium">
     <MudDataGrid T="Team" Items="@TeamData" Class="mt-2">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Teams</MudText>
