--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>Tracks</PageTitle>
 
-<MudContainer>
+<MudContainer MaxWidth="MaxWidth.ExtraLarge">
     <MudDataGrid T="Track" Items="TrackData" Bordered="true" Class="my-2">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Tracks</MudText>
