--- a/SimTECH/SimTECH/Pages/Factors/ClimateEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/ClimateEditor.razor
@@ -3,7 +3,44 @@
         <MudText Typo="Typo.h5">Climate editor</MudText>
     </TitleContent>
     <DialogContent>
+        <MudForm Model="@Model">
+            <MudStack>
+                <MudStack Row="true" Spacing="6">
+                    <MudSelect T="string" @bind-Value="@Model.Icon" Label="Icon" Class="field-xs">
+                        @foreach (var wIcon in weatherIcons)
+                        {
+                            <MudSelectItem Value="wIcon">
+                                <MudIcon Icon="@wIcon" />
+                            </MudSelectItem>
+                        }
+                    </MudSelect>
+                    <MudTextField T="string" @bind-Text="@Model.Terminology" Label="Terminology" />
+                </MudStack>
 
+                <MudSwitchM3 @bind-Checked="@Model.IsWet"
+                             Label="Is wet"
+                             Color="Color.Secondary"
+                             ThumbIcon="@Icons.Material.Filled.Done"
+                             ThumbOffIcon="@Icons.Material.Filled.Close" />
+
+                <MudNumericField T="int" @bind-Value="@Model.Odds"
+                                 Min="0"
+                                 Label="Odds" />
+
+                <MudNumericField T="double" @bind-Value="@Model.EngineMultiplier"
+                                 Step="0.1"
+                                 Min="0"
+                                 Label="Engine multiplier" />
+
+                <MudNumericField T="int" @bind-Value="@Model.ReliablityModifier"
+                                 Min="0"
+                                 Label="Reliability modifier" />
+
+                <MudNumericField T="int" @bind-Value="@Model.RngModifier"
+                                 Min="0"
+                                 Label="RNG modifier" />
+            </MudStack>
+        </MudForm>
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
@@ -14,6 +51,8 @@
 @code {
     [CascadingParameter] protected MudDialogInstance? EditDialog { get; set; }
     [Parameter] public Climate? Climate { get; set; }
+
+    private string[] weatherIcons = Constants.AllWeatherIcons;
 
     EditClimate Model;
 
