--- a/SimTECH/SimTECH/Pages/Setup/Engines.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Engines.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>Engines</PageTitle>
 
-<MudContainer>
+<MudContainer MaxWidth="MaxWidth.Medium">
     <MudDataGrid T="Engine" Items="@EngineData" Bordered="true" Class="my-2">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Engines</MudText>
