--- a/SimTECH/SimTECH/Pages/Factors/Incidents.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Incidents.razor
@@ -11,8 +11,7 @@
         </ToolBarContent>
         <Columns>
             <PropertyColumn Property="e => e.Name" />
-            <PropertyColumn Property="e => e.ForEntrant" Title="Entrant" />
-            <PropertyColumn Property="e => e.ForStatus" Title="Status" />
+            <PropertyColumn Property="e => e.Category" />
             <PropertyColumn Property="e => e.Limit" />
             <PropertyColumn Property="e => e.Punishment" />
             <PropertyColumn Property="e => e.Odds" />
