--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -100,7 +100,7 @@ else
                             <MudListItem>Chassis mod: @Model.Race.Track.ChassisMod</MudListItem>
                             <MudListItem>Power mod: @Model.Race.Track.PowerMod</MudListItem>
                             <MudListItem>Qualy mod: @Model.Race.Track.QualifyingMod</MudListItem>
-                            <MudListItem>Weather: @Model.Race.Weather</MudListItem>
+                            <MudListItem>Weather(TODO name): @Model.Race.ClimateId</MudListItem>
                         </MudList>
                     </MudPaper>
                 </MudItem>
