--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -1,4 +1,5 @@
 ﻿@page "/race/{RaceId:long}"
+@inject IncidentService _incidentService
 @inject RaceService _raceService
 @inject SeasonService _seasonService
 @inject NavigationManager _nav
@@ -14,7 +15,7 @@
             <MudStack Row="true" Spacing="4" AlignItems="AlignItems.Center" Class="mud-width-full">
                 <CountryFlag Code="@Model.Country" />
                 <MudText Typo="Typo.h6">@Model.Name - ROUND @Model.Round</MudText>
-                <MudIcon Icon="@(Model.Weather.GetWeatherIcon())" />
+                <MudIcon Icon="@Model.ClimateIcon" />
 
                 <MudSpacer />
 
@@ -106,13 +107,13 @@
                 <MudText Typo="Typo.caption">@context.LapSum</MudText>
             </MudTd>
             <MudTd>
-                @if (context.Status == RaceStatus.Racing)
+                @if (context.Incident == null)
                 {
                     <MudText>+@(context.TimedGap((highestScore - context.LapSum), Model.GapMarge))</MudText>
                 }
                 else
                 {
-                    <MudText Typo="Typo.button" Color="Color.Error">@context.Incident</MudText>
+                    <MudText Typo="Typo.button" Color="Color.Error">@context.Incident.Name</MudText>
                 }
             </MudTd>
             <MudTd>
@@ -175,6 +176,11 @@
     public RaceModel Model { get; set; }
 
     Dictionary<int, int> allotments;
+    List<Incident> driverIncidents;
+    List<Incident> carIncidents;
+    List<Incident> engineIncidents;
+    List<Incident> disqualifyIncidents;
+    List<Incident> lethalIncidents;
 
     bool loading = true;
 
@@ -197,12 +203,21 @@
 
     protected override async Task OnInitializedAsync()
     {
+        var allIncidents = await _incidentService.GetIncidents();
+
         Model = await _raceService.RetrieveRaceModel(RaceId);
+
         allotments = Model.Season.PointAllotments?.ToDictionary(e => e.Position, e => e.Points) ?? new();
         minLapRng = Model.Season.RngMinimum;
         maxLapRng = Model.Season.RngMaximum;
         pitMin = Model.Season.PitMinimum;
         pitMax = Model.Season.PitMaximum;
+
+        driverIncidents = allIncidents.Where(e => e.Category == CategoryIncident.Driver).ToList();
+        carIncidents = allIncidents.Where(e => e.Category == CategoryIncident.Car).ToList();
+        engineIncidents = allIncidents.Where(e => e.Category == CategoryIncident.Engine).ToList();
+        disqualifyIncidents = allIncidents.Where(e => e.Category == CategoryIncident.Disqualified).ToList();
+        lethalIncidents = allIncidents.Where(e => e.Category == CategoryIncident.Lethal).ToList();
 
         fatalityOdds = Model.FatalityOdds;
         disqualifyChance = Model.DisqualifyOdds;
@@ -318,19 +333,19 @@
         if (cycleReliabilty == Entrant.Driver && DidReliabilityFail(driver.DriverReliability))
         {
             lapScore.RacerEvents = RacerEvent.DriverDnf;
-            driver.Incident = EnumHelper.GetDriverIncidents.TakeRandomItem();
+            driver.Incident = driverIncidents.TakeRandomIncident();
             driver.Status = RaceStatus.Dnf;
         }
         else if (cycleReliabilty == Entrant.Team && DidReliabilityFail(driver.CarReliability))
         {
             lapScore.RacerEvents = RacerEvent.CarDnf;
-            driver.Incident = EnumHelper.GetCarIncidents.TakeRandomItem();
+            driver.Incident = carIncidents.TakeRandomIncident();
             driver.Status = RaceStatus.Dnf;
         }
         else if (cycleReliabilty == Entrant.Engine && DidReliabilityFail(driver.EngineReliability))
         {
             lapScore.RacerEvents = RacerEvent.EngineDnf;
-            driver.Incident = RaceIncident.Engine;
+            driver.Incident = engineIncidents.TakeRandomIncident();
             driver.Status = RaceStatus.Dnf;
         }
         else { return; }
@@ -339,7 +354,7 @@
         if (Model.LeagueOptions.HasFlag(LeagueOptions.EnableFatality) && (NumberHelper.RandomInt(fatalityOdds) == 0))
         {
             driver.Status = RaceStatus.Fatal;
-            driver.Incident = RaceIncident.Death;
+            driver.Incident = lethalIncidents.TakeRandomIncident();
             lapScore.RacerEvents = RacerEvent.Death;
             return;
         }
@@ -445,7 +460,7 @@
         {
             if (NumberHelper.RandomInt(disqualifyChance) == 0)
             {
-                driver.Incident = EnumHelper.GetDisqualifications.TakeRandomItem();
+                driver.Incident = disqualifyIncidents.TakeRandomIncident();
                 driver.Status = RaceStatus.Dsq;
 
                 anyoneDisqualified = true;
