--- a/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
+++ b/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
@@ -1,8 +1,11 @@
 ﻿@page "/components/{SeasonId:long}"
 @inject BreadcrumbProvider _bread
+@inject IncidentService _incidentService
 @inject SeasonService _seasonService
 
 <PageTitle>Components</PageTitle>
+
+<MudText>TODO ALL THIS HAHA</MudText>
 
 <MudContainer>
     @if (PartsPerDriver != null)
@@ -17,11 +20,6 @@
                         <HeaderContent>
                             <MudTh>Name</MudTh>
                             <MudTh Class="pa-0">No</MudTh>
-                            <MudTh>Accidents</MudTh>
-                            <MudTh>Collisions</MudTh>
-                            <MudTh>Engines</MudTh>
-                            <MudTh>Electrics</MudTh>
-                            <MudTh>Hydraulics</MudTh>
                             <MudTh>DNF</MudTh>
                             <MudTh>DSQ</MudTh>
                         </HeaderContent>
@@ -33,21 +31,6 @@
                                 <MudText Typo="Typo.caption">@context.Number</MudText>
                             </MudTd>
                             <MudTd>
-                                <MudText Typo="Typo.caption">@context.Accidents</MudText>
-                            </MudTd>
-                            <MudTd>
-                                <MudText Typo="Typo.caption">@context.Collisions</MudText>
-                            </MudTd>
-                            <MudTd>
-                                <MudText Typo="Typo.caption">@context.Engines</MudText>
-                            </MudTd>
-                            <MudTd>
-                                <MudText Typo="Typo.caption">@context.Electrics</MudText>
-                            </MudTd>
-                            <MudTd>
-                                <MudText Typo="Typo.caption">@context.Hydraulics</MudText>
-                            </MudTd>
-                            <MudTd>
                                 <MudText Typo="Typo.caption">@context.TotalDnf</MudText>
                             </MudTd>
                             <MudTd>
@@ -56,13 +39,7 @@
                         </RowTemplate>
                         <FooterContent>
                             <MudTd>LIMIT</MudTd>
-                            <MudTd>3</MudTd>
-                            <MudTd>3</MudTd>
-                            <MudTd>3</MudTd>
-                            <MudTd>3</MudTd>
-                            <MudTd>3</MudTd>
-                            <MudTd>-</MudTd>
-                            <MudTd>-</MudTd>
+                            <MudTd>TODO</MudTd>
                         </FooterContent>
                     </MudTable>
                 </MudPaper>
@@ -71,15 +48,14 @@
                 <MudPaper Class="pa-4 mud-height-full">
                     <MudText Typo="Typo.h4">Penalties</MudText>
                     <MudList>
-                        @foreach (var driver in PartsPerDriver.Where(e => e.GivenPenalties?.Any() == true))
+                        @foreach (var driver in PartsPerDriver)
                         {
-                            @foreach (var penalty in driver.GivenPenalties)
+                            @foreach (var penalty in driver.ConsumedPenalties)
                             {
                                 <MudListItem>
                                     <MudStack Row="true" Spacing="2" AlignItems="AlignItems.Center">
-                                        <MudText Typo="Typo.body2">Round @penalty.Round</MudText>
                                         <MudText>@driver.Name</MudText>
-                                        <MudText>+@(penalty.Punishment)</MudText>
+                                        <MudText>@penalty</MudText>
                                     </MudStack>
                                 </MudListItem>
                             }
@@ -94,6 +70,7 @@
 @code {
     [Parameter] public long SeasonId { get; set; }
 
+    List<Incident> Incidents;
     List<PartsUsageModel> PartsPerDriver;
 
     protected override async Task OnInitializedAsync()
@@ -106,6 +83,7 @@
             new BreadcrumbItem("Components", href: $"components/{SeasonId}", disabled: true),
         });
 
+        Incidents = await _incidentService.GetIncidents();
         PartsPerDriver = await _seasonService.GetPartsUsageModel(SeasonId);
     }
 }
